# goAheadFishFEM

./: .gitignore  CMakeLists.txt  README.md
build_cpu/: CTestTestfile.cmake  benchmark  install_manifest.txt  main  test_anisotropic  test_simple  unit_tests  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
build_gpu/: CTestTestfile.cmake  benchmark  cmake_test_discovery_e3b0c44298.json  install_manifest.txt  main  test_anisotropic  test_simple  unit_tests  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
docs/: FEM3D_for_CSEM_Review.md  FEM3D_for_CSEM_Review.tex  FEM3D_for_CSEM_rewrite.md  FEM3D_for_LWD_P00.tex  FEM3D_for_LWD_P01.tex  FEM3D_for_LWD_P02.tex  FEM3D_for_LWD_P03.tex  code_structure.md  fem_maxwell_solver_src.cpp
src/: fem_solver.cpp  fem_solver.h  main.cpp  material.h  mesh.cpp  mesh.h  sources.h  utils.h
test/: benchmark.cpp  compare_results.py  plot_3d_slices.py  test_anisotropic.cpp  test_cases.cpp  test_simple.cpp
